# prdiff

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  args.rs  git.rs  highlight.rs  lib.rs  logging.rs  main.rs  model.rs  theme.rs  tree.rs  ui.rs  watcher.rs
