[package]
name = "prdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
